<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardBackgroundColor="@color/card"
    app:cardCornerRadius="@dimen/card_corner_radius"
    app:cardElevation="@dimen/card_elevation"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        android:orientation="vertical"
        android:layout_marginBottom="@dimen/padding_small"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:textAppearance="@style/TextAppearance.AppCompat.Body2"
            android:paddingLeft="@dimen/padding_normal"
            android:paddingRight="@dimen/padding_normal"
            android:paddingBottom="@dimen/padding_normal"
            android:paddingTop="24dp"
            android:text="@string/support_development"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <LinearLayout
            android:id="@+id/bug_layout"
            android:minHeight="@dimen/md_listitem_height"
            android:gravity="center_vertical"
            android:background="@drawable/rect_selector"
            android:clickable="true"
            android:paddingLeft="@dimen/padding_normal"
            android:paddingRight="@dimen/padding_normal"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/bug_img"
                android:src="@drawable/ic_bug"
                android:layout_width="24dp"
                android:layout_height="24dp"/>

            <LinearLayout
                android:paddingTop="@dimen/padding_small"
                android:paddingBottom="@dimen/padding_small"
                android:paddingLeft="@dimen/padding_big"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
                    android:text="@string/report_bugs"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

                <TextView
                    android:text="@string/report_bugs_summary"
                    android:textAppearance="@style/TextAppearance.AppCompat.Caption"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/store_layout"
            android:minHeight="@dimen/md_listitem_height"
            android:gravity="center_vertical"
            android:background="@drawable/rect_selector"
            android:clickable="true"
            android:paddingLeft="@dimen/padding_normal"
            android:paddingRight="@dimen/padding_normal"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/store_img"
                android:src="@drawable/ic_store"
                android:layout_width="24dp"
                android:layout_height="24dp"/>

            <LinearLayout
                android:paddingTop="@dimen/padding_small"
                android:paddingBottom="@dimen/padding_small"
                android:paddingLeft="@dimen/padding_big"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
                    android:text="@string/rate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

                <TextView
                    android:text="@string/rate_summary"
                    android:textAppearance="@style/TextAppearance.AppCompat.Caption"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</android.support.v7.widget.CardView>
