<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardBackgroundColor="@color/card"
    app:cardCornerRadius="@dimen/card_corner_radius"
    app:cardElevation="@dimen/card_elevation"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        android:orientation="vertical"
        android:layout_marginBottom="@dimen/padding_small"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:textAppearance="@style/TextAppearance.AppCompat.Body2"
            android:paddingLeft="@dimen/padding_normal"
            android:paddingRight="@dimen/padding_normal"
            android:paddingBottom="@dimen/padding_normal"
            android:paddingTop="24dp"
            android:text="@string/account"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <LinearLayout
            android:id="@+id/account_manage_layout"
            android:minHeight="@dimen/md_listitem_height"
            android:gravity="center_vertical"
            android:background="@drawable/rect_selector"
            android:clickable="true"
            android:paddingLeft="@dimen/padding_normal"
            android:paddingRight="@dimen/padding_normal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/account_manage_img"
                android:src="@drawable/ic_person"
                android:layout_width="24dp"
                android:layout_height="24dp"/>

            <TextView
                android:paddingTop="@dimen/padding_small"
                android:paddingBottom="@dimen/padding_small"
                android:layout_marginLeft="@dimen/padding_big"
                android:layout_marginRight="@dimen/padding_big"
                android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
                android:text="@string/account_management"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/account_feedly_layout"
            android:minHeight="@dimen/md_listitem_height"
            android:gravity="center_vertical"
            android:background="@drawable/rect_selector"
            android:clickable="true"
            android:paddingLeft="@dimen/padding_normal"
            android:paddingRight="@dimen/padding_normal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/account_feedly_icon"
                android:src="@drawable/ic_feedly"
                android:layout_width="24dp"
                android:layout_height="24dp"/>

            <TextView
                android:paddingTop="@dimen/padding_small"
                android:paddingBottom="@dimen/padding_small"
                android:layout_marginLeft="@dimen/padding_big"
                android:layout_marginRight="@dimen/padding_big"
                android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
                android:text="@string/account_feedly_add"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"/>

            <ImageView
                android:id="@+id/account_feedly_add"
                android:src="@drawable/ic_add"
                android:layout_width="24dp"
                android:layout_height="24dp"/>
        </LinearLayout>
    </LinearLayout>
</android.support.v7.widget.CardView>
