<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardBackgroundColor="@color/card"
    app:cardCornerRadius="@dimen/card_corner_radius"
    app:cardElevation="@dimen/card_elevation"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        android:orientation="vertical"
        android:layout_marginBottom="@dimen/padding_small"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:textAppearance="@style/TextAppearance.AppCompat.Body2"
            android:paddingLeft="@dimen/padding_normal"
            android:paddingRight="@dimen/padding_normal"
            android:paddingBottom="@dimen/padding_normal"
            android:paddingTop="24dp"
            android:text="@string/share"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <LinearLayout
            android:id="@+id/wechat_layout"
            android:minHeight="@dimen/md_listitem_height"
            android:gravity="center_vertical"
            android:background="@drawable/rect_selector"
            android:clickable="true"
            android:paddingLeft="@dimen/padding_normal"
            android:paddingRight="@dimen/padding_normal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/wechat_img"
                android:src="@drawable/ic_menu_wechat"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <TextView
                android:paddingTop="@dimen/padding_small"
                android:paddingBottom="@dimen/padding_small"
                android:layout_marginLeft="@dimen/padding_big"
                android:layout_marginRight="@dimen/padding_big"
                android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
                android:text="@string/wechat"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"/>

            <android.support.v7.widget.SwitchCompat
                android:id="@+id/wechat_switch"
                android:clickable="false"
                android:background="@null"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/moment_layout"
            android:minHeight="@dimen/md_listitem_height"
            android:gravity="center_vertical"
            android:background="@drawable/rect_selector"
            android:clickable="true"
            android:paddingLeft="@dimen/padding_normal"
            android:paddingRight="@dimen/padding_normal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/moment_img"
                android:src="@drawable/ic_menu_moment"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <TextView
                android:paddingTop="@dimen/padding_small"
                android:paddingBottom="@dimen/padding_small"
                android:layout_marginLeft="@dimen/padding_big"
                android:layout_marginRight="@dimen/padding_big"
                android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
                android:text="@string/moment"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"/>

            <android.support.v7.widget.SwitchCompat
                android:id="@+id/moment_switch"
                android:clickable="false"
                android:background="@null"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/weibo_layout"
            android:minHeight="@dimen/md_listitem_height"
            android:gravity="center_vertical"
            android:background="@drawable/rect_selector"
            android:clickable="true"
            android:paddingLeft="@dimen/padding_normal"
            android:paddingRight="@dimen/padding_normal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/weibo_img"
                android:src="@drawable/ic_menu_weibo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <TextView
                android:paddingTop="@dimen/padding_small"
                android:paddingBottom="@dimen/padding_small"
                android:layout_marginLeft="@dimen/padding_big"
                android:layout_marginRight="@dimen/padding_big"
                android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
                android:text="@string/weibo"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"/>

            <android.support.v7.widget.SwitchCompat
                android:id="@+id/weibo_switch"
                android:clickable="false"
                android:background="@null"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/instapaper_layout"
            android:minHeight="@dimen/md_listitem_height"
            android:gravity="center_vertical"
            android:background="@drawable/rect_selector"
            android:clickable="true"
            android:paddingLeft="@dimen/padding_normal"
            android:paddingRight="@dimen/padding_normal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/instapaper_img"
                android:src="@drawable/ic_menu_instapaper"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <TextView
                android:paddingTop="@dimen/padding_small"
                android:paddingBottom="@dimen/padding_small"
                android:layout_marginLeft="@dimen/padding_big"
                android:layout_marginRight="@dimen/padding_big"
                android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
                android:text="@string/instapaper"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"/>

            <android.support.v7.widget.SwitchCompat
                android:id="@+id/instapaper_switch"
                android:clickable="false"
                android:background="@null"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/google_plus_layout"
            android:minHeight="@dimen/md_listitem_height"
            android:gravity="center_vertical"
            android:background="@drawable/rect_selector"
            android:clickable="true"
            android:paddingLeft="@dimen/padding_normal"
            android:paddingRight="@dimen/padding_normal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/google_plus_img"
                android:src="@drawable/ic_menu_google_plus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <TextView
                android:paddingTop="@dimen/padding_small"
                android:paddingBottom="@dimen/padding_small"
                android:layout_marginLeft="@dimen/padding_big"
                android:layout_marginRight="@dimen/padding_big"
                android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
                android:text="@string/google_plus"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"/>

            <android.support.v7.widget.SwitchCompat
                android:id="@+id/google_plus_switch"
                android:clickable="false"
                android:background="@null"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/pocket_layout"
            android:minHeight="@dimen/md_listitem_height"
            android:gravity="center_vertical"
            android:background="@drawable/rect_selector"
            android:clickable="true"
            android:paddingLeft="@dimen/padding_normal"
            android:paddingRight="@dimen/padding_normal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/pocket_img"
                android:src="@drawable/ic_menu_pocket"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <TextView
                android:paddingTop="@dimen/padding_small"
                android:paddingBottom="@dimen/padding_small"
                android:layout_marginLeft="@dimen/padding_big"
                android:layout_marginRight="@dimen/padding_big"
                android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
                android:text="@string/pocket"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"/>

            <android.support.v7.widget.SwitchCompat
                android:id="@+id/pocket_switch"
                android:clickable="false"
                android:background="@null"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </LinearLayout>
    </LinearLayout>
</android.support.v7.widget.CardView>
