<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardBackgroundColor="@color/card"
    app:cardCornerRadius="@dimen/card_corner_radius"
    app:cardElevation="@dimen/card_elevation"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        android:layout_marginBottom="@dimen/spacing_normal"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:padding="@dimen/padding_normal"
            android:layout_width="match_parent"
            android:gravity="center_vertical"
            android:layout_height="72dp">

            <ImageView
                android:src="@drawable/ic_launcher"
                android:layout_width="40dp"
                android:layout_height="40dp"/>

            <TextView
                android:textAppearance="@style/TextAppearance.AppCompat.Headline"
                android:paddingLeft="@dimen/padding_normal"
                android:paddingRight="@dimen/padding_normal"
                android:text="@string/app_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </LinearLayout>

        <LinearLayout
            android:minHeight="@dimen/md_listitem_height"
            android:gravity="center_vertical"
            android:background="@drawable/rect_selector"
            android:clickable="true"
            android:paddingLeft="@dimen/padding_normal"
            android:paddingRight="@dimen/padding_normal"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/info_img"
                android:src="@drawable/ic_info"
                android:layout_width="24dp"
                android:layout_height="24dp"/>

            <LinearLayout
                android:paddingTop="@dimen/padding_small"
                android:paddingBottom="@dimen/padding_small"
                android:paddingLeft="@dimen/padding_big"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
                    android:text="@string/version"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

                <TextView
                    android:id="@+id/version_name_txt"
                    android:text="1.0"
                    android:textAppearance="@style/TextAppearance.AppCompat.Caption"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/change_log_layout"
            android:minHeight="@dimen/md_listitem_height"
            android:gravity="center_vertical"
            android:background="@drawable/rect_selector"
            android:clickable="true"
            android:paddingLeft="@dimen/padding_normal"
            android:paddingRight="@dimen/padding_normal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/change_log_img"
                android:src="@drawable/ic_history"
                android:layout_width="24dp"
                android:layout_height="24dp"/>

            <TextView
                android:paddingTop="@dimen/padding_small"
                android:paddingBottom="@dimen/padding_small"
                android:layout_marginLeft="@dimen/padding_big"
                android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
                android:text="@string/changelog"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </LinearLayout>
    </LinearLayout>
</android.support.v7.widget.CardView>
